--- a/src/views/product-create-form.ejs
+++ b/src/views/product-create-form.ejs
@@ -14,7 +14,7 @@
 			</div>
 		</div>
 		<div class="col-12">
-			<form method="POST">
+			<form method="POST" enctype="multipart/form-data">
 				<div class="row product-detail">
 					<div class="col-12 col-md-6">
 						<label for="name" class="form-label">Nombre del producto:</label>
@@ -36,11 +36,22 @@
 							<option value="visited">Últimos agregados</option>
 						</select>
 					</div>
-					<div class="col-12">
-						<label for="description" class="form-label">Descipción:</label>
-						<textarea name="description" id="description" class="form-input"></textarea>
+					<div class="col-12 col-md-6">
+						<label for="description" class="form-label">Descripción:</label>
+						<textarea name="description" id="description" class="form-input" style="resize: none"></textarea>
 					</div>
-					<div class="col-12">
+					<div class="col-12 col-md-6">
+						<div class="row">
+							<div class="col-md-6">
+								<img src="" id="imgPrewiew" alt="">
+							</div>
+							<div class="col-6">
+								<label for="image" class="form-label">Agregar imagen:</label>
+								<input type="file" id="image" name="image" class="form-input" accept="image/*">
+							</div>
+					
+				</div>
+				<div class="col-12">
 						<button type="submit" class="buy-now-button">Guardar producto</button>
 					</div>
 				</div>
@@ -53,5 +64,15 @@
 	<!-- footer -->
 	<%- include('partials/footer') %>
 	<!-- /footer -->
+	<script>
+		document.getElementById('image').addEventListener('change', (e)=>{
+			let reader = new FileReader();
+		reader.readAsDataURL(e.target.files[0])
+		reader.onload = () => {
+			document.getElementById('imgPreview').src = reader.result
+		}
+		})
+		
+	</script>
 </body>	
 </html>
